--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     </div><!-- .container -->
 
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
 
   </body>
 </html>
